<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".GenrePick">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/kaisei_haruno_umi_bold"
        android:text="CineCritique"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pfp"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_person_24" />

    <View
        android:id="@+id/horzLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/titleText"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="55dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/horzLine">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mainpagebtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                app:layout_constraintEnd_toStartOf="@id/genreTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/genreTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "Genres"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/open_sans_medium"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:columnCount="3"
                android:rowCount="7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genreTitle"
                app:layout_constraintEnd_toEndOf="parent">

                <Button
                    android:id="@+id/popularButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Popular"
                    android:textSize="15sp" />
                <Button
                    android:id="@+id/actionButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Action"
                    android:textSize="15sp"/>
                <Button
                    android:id="@+id/adventureButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Adventure"
                    android:textSize="12sp"/>
                <Button
                    android:id="@+id/animationButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Animation"
                    android:textSize="13sp"/>
                <Button
                    android:id="@+id/comedyButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Comedy"
                    android:textSize="16sp"/>
                <Button
                    android:id="@+id/crimeButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Crime"
                    android:textSize="19sp"/>
                <Button
                    android:id="@+id/documentaryButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Documentary"
                    android:textSize="10sp"/>
                <Button
                    android:id="@+id/dramaButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Drama"
                    android:textSize="17sp"/>
                <Button
                    android:id="@+id/familyButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Family"
                    android:textSize="17sp"/>
                <Button
                    android:id="@+id/fantasyButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Fantasy"
                    android:textSize="15sp"/>
                <Button
                    android:id="@+id/historyButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/History"
                    android:textSize="17sp"/>
                <Button
                    android:id="@+id/horrorButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Horror"
                    android:textSize="17sp"/>
                <Button
                    android:id="@+id/musicButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Music"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/mysteryButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Mystery"
                    android:textSize="16sp"/>
                <Button
                    android:id="@+id/romanceButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Romance"
                    android:textSize="14sp"/>
                <Button
                    android:id="@+id/scienceButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Science"
                    android:textSize="17sp"/>
                <Button
                    android:id="@+id/tvButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/TV"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/thrillerButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Thriller"
                    android:textSize="18sp"/>
                <Button
                    android:id="@+id/warButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/War"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/westernButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/genre_button"
                    android:text="@string/Western"
                    android:textSize="16sp"/>






            </GridLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>